# poulpeEngine

./: .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeHiddenPresets.json  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Doxyfile  LinuxGenerateProject.sh  Makefile  Poulpe.cpp  PoulpeEngineConfig.h  PoulpeEngineConfig.h.in  README.md  ReBulkan.files  ReBulkan.includes  Rebulkan.files  Rebulkan.includes  Rebulkan.make  Rebulkan.sln  Rebulkan.vcxproj  Rebulkan.vcxproj.filters  RebulkanConfig.h.in  WinGenerateProject.bat  checklist.md  imgui.ini  notes.md  notes.txt  poulpeEngine.rc  premake5.lua
src/Editor/Manager/: CMakeLists.txt  EditorManager.cpp  EditorManager.cppm  ExplorerManager.cpp  ExplorerManager.cppm  LevelManager.cpp  LevelManager.cppm
src/Engine/: Application.cpp  Application.cppm  CMakeLists.txt
src/Engine/Animation/: AnimationScript.cpp  AnimationScript.cppm  AnimationTypes.cppm  BoneAnimationScript.cpp  BoneAnimationScript.cppm  CMakeLists.txt
src/Engine/Component/: AnimationTypes.cppm  CMakeLists.txt  Camera.cpp  Camera.cppm  Components.cppm  Entity.cpp  Entity.cppm  EntityNode.cppm  Mesh.cpp  Mesh.cppm  Texture.cppm  Vertex.cppm
src/Engine/Core/: AnimationTypes.cppm  AssimpLoader.cpp  AssimpLoader.cppm  BoneTypes.cppm  CMakeLists.txt  Camera.cpp  Camera.cppm  Command.cpp  Command.cppm  CommandQueue.cpp  CommandQueue.cppm  CommandQueueLocator.cpp  CommandQueueLocator.cppm  ConfigManagerLocator.cpp  ConfigManagerLocator.cppm  Constants.cppm  FontTypes.cppm  FreeType.cppm  GLFW.cppm  GLM.cppm  InputManagerLocator.cpp  InputManagerLocator.cppm  JoinThreads.cppm  Json.cppm  LightTypes.cppm  LockFreeStack.cppm  Logger.cppm  Lua.cppm  MaterialTypes.cppm  MeshTypes.cppm  MiniAudio.cppm  PlpTypedef.cppm  StbImage.cppm  TclTk.cppm  ThreadPool.cppm  ThreadSafeQueue.cppm  Tools.cpp  Tools.cppm  Vertex.cppm  Volk.cppm  (+2 more)
src/Engine/Core/Network/: CMakeLists.txt  Server.cpp  Server.cppm  Socket.cpp  Socket.cppm
src/Engine/GUI/: CMakeLists.txt  Window.cpp  Window.cppm
src/Engine/GUI/Scripts/: main.tcl  main_ui.tcl  styles.tcl
src/Engine/Manager/: APIManager.cpp  APIManager.cppm  AudioManager.cpp  AudioManager.cppm  CMakeLists.txt  ComponentManager.cpp  ComponentManager.cppm  ConfigManager.cpp  ConfigManager.cppm  ConfigManagerLocator.cpp  ConfigManagerLocator.cppm  DbManager.cpp  DbManager.cppm  DestroyManager.cpp  DestroyManager.cppm  EntityManager.cpp  EntityManager.cppm  FontManager.cpp  FontManager.cppm  InputManager.cpp  InputManager.cppm  InputManagerLocator.cpp  InputManagerLocator.cppm  LightManager.cpp  LightManager.cppm  Managers.cppm  NetworkManager.cpp  NetworkManager.cppm  PlayerManager.cpp  PlayerManager.cppm  RenderManager.cpp  RenderManager.cppm  ShaderManager.cpp  ShaderManager.cppm  SystemManager.cpp  SystemManager.cppm  TextureManager.cpp  TextureManager.cppm  UIManager.cpp  UIManager.cppm
src/Engine/Network/: CMakeLists.txt  Server.cpp  Server.cppm  Socket.cpp  Socket.cppm
src/Engine/Renderer/: CMakeLists.txt  Mesh.cppm  Renderer.cppm  RendererComponent.cppm  RendererComponentFactory.cppm  RendererComponentTypes.cppm  Renderers.cppm
src/Engine/Renderer/Vulkan/: CMakeLists.txt  DeviceMemory.cpp  DeviceMemory.cppm  DeviceMemoryPool.cpp  DeviceMemoryPool.cppm  Renderer.cpp  Renderer.cppm  RendererComponent.cpp  RendererComponent.cppm  RendererComponentTypes.cppm  VulkanAPI.cpp  VulkanAPI.cppm
src/Engine/Utils/: CMakeLists.txt  IDHelper.cppm  LuaScript.cpp  LuaScript.cppm  ScopedTimer.cppm
src/Rebulk/: Application.cpp  Application.h  Application.hpp  CMakeLists.txt
src/Rebulk/Component/: CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  Drawable.cpp  Drawable.h  Entity.cpp  Entity.h  Entity.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  Mesh2D.cpp  Mesh2D.h  Mesh2D.hpp  Object.hpp  Texture.cpp  Texture.h  Vertex.h  Vertex.hpp  Vertex2D.h  Vertex2D.hpp
src/Rebulk/Core/: Buffer.h  Buffer.hpp  CMakeLists.txt  Command.cpp  Command.hpp  CommandQueue.cpp  CommandQueue.hpp  IObserver.hpp  IVisitor.cpp  IVisitor.h  IVisitor.hpp  JoinThreads.hpp  Locator.hpp  Log.cpp  Log.h  Log.hpp  MeshData.h  MeshData.hpp  ThreadPool.cpp  ThreadPool.h  ThreadPool.hpp  ThreadSafeQueue.hpp  TinyObjLoader.cpp  TinyObjLoader.h  TinyObjLoader.hpp  Tools.cpp  Tools.h  Tools.hpp
src/Rebulk/Core/VisitorStrategy/: VisitorDrawable.cpp  VisitorDrawable.h  VisitorVulkan.cpp  VisitorVulkan.h  VulkanCrosshair.cpp  VulkanCrosshair.h  VulkanEntityDraw.cpp  VulkanEntityDraw.h  VulkanGrid.cpp  VulkanGrid.h  VulkanHUD.cpp  VulkanHUD.h  VulkanInit.cpp  VulkanInit.h  VulkanInitEntity.cpp  VulkanInitEntity.h  VulkanSkybox.cpp  VulkanSkybox.h  VulkanSplash.cpp  VulkanSplash.h
src/Rebulk/GUI/: CMakeLists.txt  ILayerManager.h  ILayerManager.hpp  LayerManager.cpp  LayerManager.h  LayerManager.hpp  VulkanLayer.h  Window.cpp  Window.h  Window.hpp
src/Rebulk/GUI/ImGui/: CMakeLists.txt  Im.cpp  Im.h  Im.hpp
src/Rebulk/GUI/Layer/: CMakeLists.txt  ILayer.h  ILayer.hpp  VulkanLayer.cpp  VulkanLayer.h  VulkanLayer.hpp
src/Rebulk/GUI/Renderer/: Im.h
src/Rebulk/Manager/: AudioManager.cpp  AudioManager.h  AudioManager.hpp  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ConfigManager.cpp  ConfigManager.h  ConfigManager.hpp  DestroyManager.cpp  DestroyManager.h  DestroyManager.hpp  EntityManager.cpp  EntityManager.h  EntityManager.hpp  IAudioManager.h  IAudioManager.hpp  IConfigManager.h  IConfigManager.hpp  IEntityManager.h  IEntityManager.hpp  IInputManager.h  IInputManager.hpp  IRenderManager.h  IRenderManager.hpp  IShaderManager.h  IShaderManager.hpp  ISpriteAnimationManager.h  ITextureManager.h  ITextureManager.hpp  InputManager.cpp  InputManager.h  InputManager.hpp  KeyManager.cpp  KeyManager.h  MeshManager.cpp  MeshManager.h  RenderManager.cpp  RenderManager.h  RenderManager.hpp  (+9 more)
src/Rebulk/Pattern/: IObserver.h  ISubject.h
src/Rebulk/Renderer/: CMakeLists.txt  IRenderer.h  IRenderer.hpp  Mesh.h
src/Rebulk/Renderer/Adapter/: CMakeLists.txt  IRendererAdapter.h  IRendererAdapter.hpp  VulkanAdapter.cpp  VulkanAdapter.h  VulkanAdapter.hpp
tests/: CMakeLists.txt
(+613 files in other folders)
